2008-08-02  Johan Dahlin  <johan@gnome.org>

	* gio/gfileinfo.override:
	* gio/gio.override:
	* glib/glibmodule.c (pyglib_get_current_time):
	* glib/pyglib.c (pyglib_float_from_timeval):
	* glib/pyglib.h:
	Add pyglib_float_from_timeval and use it

2008-08-02  Johan Dahlin  <johan@gnome.org>

	* docs/Makefile.am:
	* docs/reference/pyglib-constants.xml:
	* docs/reference/pyglib-functions.xml:
	* docs/reference/pyglib-maincontext.xml:
	* docs/reference/pyglib-mainloop.xml:
	* docs/reference/pygobject-classes.xml:
	* docs/reference/pygobject-constants.xml:
	* docs/reference/pygobject-functions.xml:
	* docs/reference/pygobject-maincontext.xml:
	* docs/reference/pygobject-mainloop.xml:
	Separate the glib and gobject bindings in the manual.

2008-08-02  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 545920 – Wrap GFile.query_writable_namespaces

	* tests/test_gio.py:
	* gio/gfile.override:
	* gio/gio.defs:
	Wrap GFile.query_writable_namespaces with docs and test

2008-08-02  Johan Dahlin  <johan@gnome.org>

	* gio/gio.defs:
	* gio/gfile.override:
	* tests/test_gio.py:
	Wrap gio.File.move

2008-08-02  Johan Dahlin  <johan@gnome.org>

	* gio/Makefile.am:
	* gio/gfile.override:
	* gio/gio.defs:
	* gio/gio.override:
	* gio/gvolume.override:
	Wrap gio.Volume.mount and gio.Volume.eject

2008-08-01  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gio.defs:
	Add docstring for gio.FileInfo.list_attributes

2008-08-01  Johan Dahlin  <johan@gnome.org>

	Bug 545861 – g_file_info_get_modification_time is missing
	* gio/gfileinfo.override:
	* gio/gio.defs:
	* tests/test_gio.py:
	Wrap, add test and documentation

2008-08-01  Johan Dahlin  <johan@gnome.org>

	Bug 545846 – g_vfs_get_supported_uri_schemes is missing

	* gio/gio.defs:
	* gio/gio.override:
	* tests/test_gio.py:
	Wrap, add test and documentation

2008-08-01  Johan Dahlin  <johan@gnome.org>

	* glib/glibmodule.c (pyglib_set_application_name):
	Use %r instead of %s, this is not python!
